--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </p>
       <div class="logo-contend">
         <li>
-          <img src="images/title.PNG" alt="" height="50px">
+          <img src="images/title.PNG" alt="" height="35px">
           <div class="icons-app">
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-tiktok"></i></a>
@@ -149,6 +149,7 @@
           <a href="#">Login</a>
         </li>
       </div>
+      <hr class="hr">
     </div>
   </section>
 </body>
