--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
          <input type="hidden" name="access_key" value="7be08828-5d64-4cfd-a79a-de83b01bbcdc">
            <input type="text" name="Name" id="Name" placeholder="Full Name" required>
            <input type="email" name="email" id="email" placeholder="Email Address" required>
-           <input type="message" name="Subject" id="message" placeholder="Subject" required>
-           <textarea name="Message" id="Message" cols="30" rows="5" placeholder="Message" required></textarea>
+           <input type="number" name="numer" id="number" placeholder="Phone Number" required>
            <button type="submit" class="btn">Submit</button>
         </form>
        </div>
@@ -151,6 +150,18 @@
       </div>
       <hr class="hr">
     </div>
+  </section>
+  <section class="bancaire">
+    <li>
+      <div class="suite">
+        <p>© 2024 Puresport. All of our products are sold as food supplements and not <br> 
+          intended to diagnose, cure, prevent or treat disease. Always consult your <br> 
+          health professional before taking any food supplements.</p>
+      </div>
+      <div class="img">
+        <img src="images/Capture d’écran 2024-06-23 154507.png" alt="">
+      </div>
+    </li>
   </section>
 </body>
 </html>
