--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <title>sport</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
         <div class="logo">
           <h1>Puresport<span>@</span></h1>
         </div>
-        <li><a href="#">SUPPLEMENT</a></li>
+        <li><a href="http://127.0.0.1:5500/shop%20all.html">SUPPLEMENT</a></li>
         <li><a href="#">APPAEL</a></li>
         <li><a href="#">OUR STORY</a></li>
         <li><a href="#">CLUBS</a></li>
@@ -35,14 +35,14 @@
     <div class="sellers">
       <h1>OUR BEST SELLERS</h1>
       <div class="link">
-        <a href="#">Shop All</a>
+        <a href="http://127.0.0.1:5500/shop%20all.html">Shop All</a>
       </div>
     </div>
     <div class="cartes">
      <li>
       <div class="card1">
         <div class="img">
-          <img src="images/bar.png" alt="" height="350px">
+          <a href="#"><img src="images/bar.png" alt="" height="350px"></a>
         </div>
         <div class="container">
           <h3>ULTRA ELECTROLYTES - <br> CITRUS SALT</h3>
@@ -55,7 +55,7 @@
 
       <div class="card2">
         <div class="img">
-          <img src="images/bar.png" alt="" height="350px">
+          <a href="#"><img src="images/bar.png" alt="" height="350px"></a>
         </div>
         <div class="container">
           <h3>ULTRA ELECTROLYTES - <br> CITRUS SALT</h3>
@@ -68,7 +68,7 @@
 
       <div class="card3">
         <div class="img">
-          <img src="images/MagnesiumResizes2_1.png" alt="" height="350px">
+          <a href="#"><img src="images/MagnesiumResizes2_1.png" alt="" height="350px"></a>
         </div>
         <div class="container">
           <h3>ULTRA MAGNESIUM - <br> CITRUS SALT</h3>
