--- a/shop all.html
+++ b/shop all.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="shop all.css">
+    <link rel="stylesheet" href="/css/shop all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Shop all</title>
 </head>
 <body>
     <header>
         <div class="fond">
-         <img src="shop all/shop all.png" alt="" height="00px">
+         <img src="shop all/shop all.png" alt="" >
+         <h1>SHOP ALL</h1>
+        </div>
         <div class="navlist">
          <ul>
            <div class="logo">
@@ -29,5 +31,10 @@
          </ul>
         </div>
      </header>
+     <section class="container">
+      <div class="contend">
+        <p>Shop All</p>
+      </div>
+     </section>
 </body>
 </html>
