--- a/shop all.html
+++ b/shop all.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,31 +10,31 @@
 <body>
     <header>
         <div class="fond">
-         <img src="shop all/shop all.png" alt="" >
-         <h1>SHOP ALL</h1>
+            <img src="shop all/shop all.png" alt="">
+            <h1>SHOP ALL</h1>
         </div>
         <div class="navlist">
-         <ul>
-           <div class="logo">
-             <h1>Puresport<span>@</span></h1>
-           </div>
-           <li><a href="#">SUPPLEMENT</a></li>
-           <li><a href="#">APPAEL</a></li>
-           <li><a href="#">OUR STORY</a></li>
-           <li><a href="#">CLUBS</a></li>
-           <li><a href="#">EVENTS</a></li>
-             <div class="icon">
-               <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-               <a href="#"><i class="fa-regular fa-user"></i></a>
-               <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
-             </div>
-         </ul>
+            <ul>
+                <div class="logo">
+                    <h1>Puresport<span>@</span></h1>
+                </div>
+                <li><a href="#">SUPPLEMENT</a></li>
+                <li><a href="#">APPAEL</a></li>
+                <li><a href="#">OUR STORY</a></li>
+                <li><a href="#">CLUBS</a></li>
+                <li><a href="#">EVENTS</a></li>
+                <div class="icon">
+                    <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <a href="#"><i class="fa-regular fa-user"></i></a>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                </div>
+            </ul>
         </div>
-     </header>
-     <section class="container">
-      <div class="contend">
-        <p>Shop All</p>
-      </div>
-     </section>
+    </header>
+    <section class="container">
+        <div class="contend">
+            <p>Shop All</p>
+        </div>
+    </section>
 </body>
 </html>
