--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <li><a href="http://127.0.0.1:5500/shop%20all.html">SUPPLEMENT</a></li>
         <li><a href="#">APPAEL</a></li>
-        <li><a href="#">OUR STORY</a></li>
+        <li><a href="http://127.0.0.1:5500/our%20story.html">OUR STORY</a></li>
         <li><a href="#">CLUBS</a></li>
         <li><a href="#">EVENTS</a></li>
           <div class="icon">
