ajout de fonctionalllité pro

--- a/our story.html
+++ b/our story.html
@@ -14,9 +14,9 @@
      <div class="navlist">
       <ul>
         <div class="logo">
-          <h1>Puresport<span>@</span></h1>
+          <a href="/index.html"><h1>Puresport<span>@</span></h1></a>
         </div>
-        <li><a href="http://127.0.0.1:5500/shop%20all.html">SUPPLEMENT</a></li>
+        <li><a href="/shop all.html">SUPPLEMENT</a></li>
         <li><a href="#">APPAEL</a></li>
         <li><a href="#">OUR STORY</a></li>
         <li><a href="#">CLUBS</a></li>
