--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -96,7 +96,7 @@
       </div>
     </li>
     <div class="link-contend">
-      <a href="#">The Puresport Story <span>></span> </a>
+      <a href="/our story.html">The Puresport Story <span>></span> </a>
     </div>
   </section>
   <section class="footer-contend">
