--- a/shop all.html
+++ b/shop all.html
@@ -16,11 +16,11 @@
         <div class="navlist">
             <ul>
                 <div class="logo">
-                  <a href="/index.html"><h1>Puresport<span>@</span></h1></a>  
+                  <a href="index.html"><h1>Puresport<span>@</span></h1></a>  
                 </div>
                 <li><a href="#">SUPPLEMENT</a></li>
                 <li><a href="#">APPAEL</a></li>
-                <li><a href="/our story.html">OUR STORY</a></li>
+                <li><a href="our story.html">OUR STORY</a></li>
                 <li><a href="#">CLUBS</a></li>
                 <li><a href="#">EVENTS</a></li>
                 <div class="icon">
