--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="logo">
           <h1>Puresport<span>@</span></h1>
         </div>
-        <li><a href="/shop all.html">SUPPLEMENT</a></li>
+        <li><a href="shop all.html">SUPPLEMENT</a></li>
         <li><a href="#">APPAEL</a></li>
-        <li><a href="/our story.html">OUR STORY</a></li>
+        <li><a href="our story.html">OUR STORY</a></li>
         <li><a href="#">CLUBS</a></li>
         <li><a href="#">EVENTS</a></li>
           <div class="icon">
@@ -35,7 +35,7 @@
     <div class="sellers">
       <h1>OUR BEST SELLERS</h1>
       <div class="link">
-        <a href="/shop all.html">Shop All</a>
+        <a href="shop all.html">Shop All</a>
       </div>
     </div>
     <div class="cartes">
@@ -96,7 +96,7 @@
       </div>
     </li>
     <div class="link-contend">
-      <a href="/our story.html">The Puresport Story <span>></span> </a>
+      <a href="our story.html">The Puresport Story <span>></span> </a>
     </div>
   </section>
   <section class="footer-contend">
