--- a/our story.html
+++ b/our story.html
@@ -19,7 +19,7 @@
         <li><a href="shop all.html">SUPPLEMENT</a></li>
         <li><a href="#">APPAEL</a></li>
         <li><a href="#">OUR STORY</a></li>
-        <li><a href="#">CLUBS</a></li>
+        <li><a href="clubs.html">CLUBS</a></li>
         <li><a href="#">EVENTS</a></li>
           <div class="icon">
             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
