--- a/shop all.html
+++ b/shop all.html
@@ -21,7 +21,7 @@
                 <li><a href="#">SUPPLEMENT</a></li>
                 <li><a href="#">APPAEL</a></li>
                 <li><a href="our story.html">OUR STORY</a></li>
-                <li><a href="#">CLUBS</a></li>
+                <li><a href="clubs.html">CLUBS</a></li>
                 <li><a href="#">EVENTS</a></li>
                 <div class="icon">
                     <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
