--- a/our story.html
+++ b/our story.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="fond">
-        <img src="/our story/shop all.png" alt="">
+        <img src="our story/shop all.png" alt="">
      <div class="navlist">
       <ul>
         <div class="logo">
