--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <li><a href="#">CLUBS</a></li>
         <li><a href="#">EVENTS</a></li>
           <div class="icon">
-            <a href="login.html"><i class="fa-solid fa-magnifying-glass"></i></a>
-            <a href="#"><i class="fa-regular fa-user"></i></a>
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+            <a href="login.html"><i class="fa-regular fa-user"></i></a>
             <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
           </div>
       </ul>
