--- a/our story.html
+++ b/our story.html
@@ -22,8 +22,8 @@
         <li><a href="clubs.html">CLUBS</a></li>
         <li><a href="#">EVENTS</a></li>
           <div class="icon">
-            <a href="login.html"><i class="fa-solid fa-magnifying-glass"></i></a>
-            <a href="#"><i class="fa-regular fa-user"></i></a>
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+            <a href="login.html"><i class="fa-regular fa-user"></i></a>
             <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
           </div>
       </ul>
