--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <title>Shop all</title>
+    <title>login</title>
 </head>
 <body>
     <header>
@@ -35,15 +35,18 @@
             <form action="#" method="post">
                     <input type="email" name="email" id="email" placeholder="Email" required>
                     <input type="password" name="password" id="password" placeholder="Password" required>
+                    <div class="password">
+                        <a href="#">Forgot your password?<hr></a>
+                    </div>
+                    <div class="pass-btn">
+                        <button type="submit">Sign In</button>
+                        <DIV class="account">
+                            <a href="creat account.html">Create account<hr></a>
+                        </DIV>
+                    </div>
             </form>
-            <div class="password">
-                <a href="#">Forgot your password?<hr></a>
-            </div>
-            <div class="pass-btn">
-                <button type="button">SIGN UP</button>
-                <DIV class="account">
-                    <a href="#">Create account<hr></a>
-                </DIV>
-            </div>
         </div>
     </section>
+   
+        
+ </body>
