--- a/creat account.html
+++ b/creat account.html
@@ -38,7 +38,7 @@
                 <input type="email" name="email" id="email" placeholder="Email" required>
                 <input type="password" name="password" id="password" placeholder="Password" required>
                      <div class="pass-btn">
-                        <button type="submit">Sign In</button>
+                        <button type="submit">CREATE</button>
                     </div>
             </form>
         </div>
