--- a/login.html
+++ b/login.html
@@ -47,6 +47,53 @@
             </form>
         </div>
     </section>
-   
+    <section class="footer">
+        <div class="footer-img">
+                <li>
+                    <img src="images/title.PNG" alt="">
+                    <div class="icons-app">
+                      <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                      <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                      <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                      <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    </div>
+                  </li>
+                  <div class="li-twoo">
+                    <li class="li-two">
+                        <a href="#">Learn</a>
+                        <a href="#">Lab Reports</a>
+                        <a href="#">Ambassadors</a>
+                        <a href="#">Subscription</a>
+                        <a href="#">Contact</a>
+                        <a href="#">Term & Condtition</a>
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">Shipping & Returns</a>
+                        <a href="#">Login</a>
+                      </li>
+                  </div>
+                  <hr>
+                  <div class="footer-suite">
+                    <div class="suite">
+                        <p>© 2024 Puresport. All of our products are sold as food supplements and not <br> 
+                          intended to diagnose, cure, prevent or treat disease. Always consult your <br> 
+                          health professional before taking any food supplements.</p>
+                      </div>
+                      <div class="img">
+                        <img src="images/Capture d’écran 2024-06-23 154507.png" alt="">
+                      </div>
+                  </div>
+                  <div class="pays">
+                    <select id="country-select">
+                        <option value="fr">France (EUR €)</option>
+                        <option value="us">États-Unis (USD $)</option>
+                        <option value="uk">Royaume-Uni (GBP £)</option>
+                        <option value="de">Allemagne (EUR €)</option>
+                        <option value="jp">Japon (JPY ¥)</option>
+                        <!-- Ajoutez d'autres pays ici -->
+                    </select>
+                  </div>
+        </div>          
+    </section>
         
  </body>
