--- a/clubs.html
+++ b/clubs.html
@@ -41,8 +41,14 @@
         </div>
     </header>
      <section class="running">
-        <div class="strava">
-            <img src="" alt="">
-        </div>
+        <DIV class="strava-info">
+            <div class="strava">
+                <img src="clubs/clubs running.png" alt="">
+            </div>
+            <div class="strava-contend">
+                <h1>Follow on Strava for Updates</h1>
+                <a href="#">STRAVA</a>
+            </div>
+        </DIV>
      </section>
 </body>
