--- a/clubs.html
+++ b/clubs.html
@@ -47,8 +47,33 @@
             </div>
             <div class="strava-contend">
                 <h1>Follow on Strava for Updates</h1>
-                <a href="#">STRAVA</a>
+                <div class="link">
+                    <a href="https://www.strava.com/clubs/puresport">STRAVA</a>
+                </div>
             </div>
         </DIV>
+     </section>
+     <section class="footer">
+        <div class="contact">
+            <div class="text">
+                <h1>Sign up and receive 10% off</h1>
+                <h3>Get 10% off your first order, and ifromation on<br>upcoming promotions & appareil drops.</h3>
+                <p>*Discount applies to full price products only and excludes bundles & subscriptions.</p>
+            </div>
+            <div class="formulaire">
+                <form action="https://api.web3forms.com/submit" method="post">
+                 <input type="hidden" name="access_key" value="7be08828-5d64-4cfd-a79a-de83b01bbcdc">
+                   <input type="text" name="Name" id="Name" placeholder="First Name" required>
+                   <input type="email" name="email" id="email" placeholder="Email Address" required>
+                   <input type="number" name="numer" id="number" placeholder="Phone Number" required>
+                   <button type="submit" class="btn">SUBMIT</button>
+                </form>
+                <p class="second">By entering your phone number and submitting this form, you consent to 
+                    receive marketing text <br> messages (such as promotion codes and cart reminders) 
+                    from Puresport at the number provided, <br> Consent is not a condition of any 
+                    purchase. Message and data rates may apply. 
+                    Message <br> frequency varies. You can unsubscribe at any time by replying STOP</p>
+            </div>
+        </div>
      </section>
 </body>
