--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#">APPAEL</a></li>
         <li><a href="our story.html">OUR STORY</a></li>
         <li><a href="#">CLUBS</a></li>
-        <li><a href="#">EVENTS</a></li>
+        <li><a href="event.html">EVENTS</a></li>
           <div class="icon">
             <a href="#" ><i class="fa-solid fa-magnifying-glass" ></i></a>
             <a href="login.html"><i class="fa-regular fa-user"></i></a>
