--- a/our story.html
+++ b/our story.html
@@ -20,7 +20,7 @@
         <li><a href="#">APPAEL</a></li>
         <li><a href="#">OUR STORY</a></li>
         <li><a href="clubs.html">CLUBS</a></li>
-        <li><a href="#">EVENTS</a></li>
+        <li><a href="event.html">EVENTS</a></li>
           <div class="icon">
             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
             <a href="login.html"><i class="fa-regular fa-user"></i></a>
