--- a/our story.html
+++ b/our story.html
@@ -17,7 +17,7 @@
           <a href="index.html"><h1>Puresport<span>@</span></h1></a>
         </div>
         <li><a href="shop all.html">SUPPLEMENT</a></li>
-        <li><a href="#">APPAEL</a></li>
+        <li><a href="#">APPAREL</a></li>
         <li><a href="#">OUR STORY</a></li>
         <li><a href="clubs.html">CLUBS</a></li>
         <li><a href="event.html">EVENTS</a></li>
