--- a/apparel.html
+++ b/apparel.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/shop all.css">
+    <link rel="stylesheet" href="css/apparel.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <title>Shop all</title>
+    <title>clubs</title>
 </head>
 <body>
     <header>
         <div class="fond">
-            <img src="shop all/shop all.png" alt="">
-            <h1>SHOP ALL</h1>
+            <img src="apparel/Overlay_Web2_2000x.png" alt="">
+            <h1>COLLECTION 01</h1>
         </div>
         <div class="navlist">
             <ul>
                 <div class="logo">
                   <a href="index.html"><h1>Puresport<span>@</span></h1></a>  
                 </div>
-                <li><a href="#">SUPPLEMENT</a></li>
-                <li><a href="#">APPAREL</a></li>
+                <li><a href="shop all.html">SUPPLEMENT</a></li>
+                <li><a href="#">APPAEL</a></li>
                 <li><a href="our story.html">OUR STORY</a></li>
-                <li><a href="clubs.html">CLUBS</a></li>
-                <li><a href="event.html">EVENTS</a></li>
+                <li><a href="#">CLUBS</a></li>
+                <li><a href="#">EVENTS</a></li>
                 <div class="icon">
                     <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                     <a href="login.html"><i class="fa-regular fa-user"></i></a>
@@ -31,10 +31,9 @@
             </ul>
         </div>
     </header>
-    <section class="container">
-        <div class="contend">
-            <p>Shop All</p>
+    <section class="produits">
+        <div class="text">
+            <p>Collection 01</p>
         </div>
     </section>
 </body>
-</html>
