--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h1>Puresport<span>@</span></h1>
         </div>
         <li><a href="shop all.html">SUPPLEMENT</a></li>
-        <li><a href="#">APPAEL</a></li>
+        <li><a href="#">APPAREL</a></li>
         <li><a href="our story.html">OUR STORY</a></li>
         <li><a href="#">CLUBS</a></li>
         <li><a href="event.html">EVENTS</a></li>
