--- a/event.html
+++ b/event.html
@@ -18,7 +18,7 @@
                   <a href="index.html"><h1>Puresport<span>@</span></h1></a>  
                 </div>
                 <li><a href="shop all.html">SUPPLEMENT</a></li>
-                <li><a href="#">APPAEL</a></li>
+                <li><a href="apparel.html">APPAEL</a></li>
                 <li><a href="our story.html">OUR STORY</a></li>
                 <li><a href="#">CLUBS</a></li>
                 <li><a href="#">EVENTS</a></li>
