--- a/shop all.html
+++ b/shop all.html
@@ -19,7 +19,7 @@
                   <a href="index.html"><h1>Puresport<span>@</span></h1></a>  
                 </div>
                 <li><a href="#">SUPPLEMENT</a></li>
-                <li><a href="#">APPAREL</a></li>
+                <li><a href="apparel.html">APPAREL</a></li>
                 <li><a href="our story.html">OUR STORY</a></li>
                 <li><a href="clubs.html">CLUBS</a></li>
                 <li><a href="event.html">EVENTS</a></li>
