--- a/event.html
+++ b/event.html
@@ -73,7 +73,7 @@
       
           <div id="modalBackDrop"></div>
       
-          <script src="script.js"></script>
+          <script src="java script/script.js"></script>
     </section>    
     <section class="footer">
         <div class="footer-img">
