--- a/event.html
+++ b/event.html
@@ -80,11 +80,11 @@
                 <li>
                     <img src="images/title.PNG" alt="">
                     <div class="icons-app">
-                      <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                      <a href="#"><i class="fa-brands fa-tiktok"></i></a>
-                      <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                      <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                      <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                      <a href="https://twitter.com/puresportco"><i class="fa-brands fa-x-twitter"></i></a>
+                      <a href="https://www.tiktok.com/@puresport.co"><i class="fa-brands fa-tiktok"></i></a>
+                      <a href="https://www.instagram.com/puresport/"><i class="fa-brands fa-instagram"></i></a>
+                      <a href="https://www.youtube.com/channel/UCgMb_715-KFq48rpVMEzqBg"><i class="fa-brands fa-youtube"></i></a>
+                      <a href="https://www.facebook.com/puresportclubs"><i class="fa-brands fa-facebook"></i></a>
                     </div>
                   </li>
                   <div class="li-twoo">
