--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="shop all.html">SUPPLEMENT</a></li>
         <li><a href="apparel.html">APPAREL</a></li>
         <li><a href="our story.html">OUR STORY</a></li>
-        <li><a href="#">CLUBS</a></li>
+        <li><a href="clubs.html">CLUBS</a></li>
         <li><a href="event.html">EVENTS</a></li>
           <div class="icon">
             <a href="#" ><i class="fa-solid fa-magnifying-glass" ></i></a>
@@ -128,11 +128,11 @@
         <li>
           <img src="images/title.PNG" alt="" height="35px">
           <div class="icons-app">
-            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-tiktok"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://twitter.com/puresportco"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.tiktok.com/@puresport.co"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://www.instagram.com/puresport/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCgMb_715-KFq48rpVMEzqBg"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.facebook.com/puresportclubs"><i class="fa-brands fa-facebook"></i></a>
           </div>
         </li>
         <li class="li-two">
