--- a/apparel.html
+++ b/apparel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="myapp/css/apparel.css">
+    <link rel="stylesheet" href="css/apparel.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>clubs</title>
 </head>
@@ -21,8 +21,8 @@
                 <li><a href="shop all.html">SUPPLEMENT</a></li>
                 <li><a href="#">APPAEL</a></li>
                 <li><a href="our story.html">OUR STORY</a></li>
-                <li><a href="#">CLUBS</a></li>
-                <li><a href="#">EVENTS</a></li>
+                <li><a href="clubs.html">CLUBS</a></li>
+                <li><a href="event.html">EVENTS</a></li>
                 <div class="icon">
                     <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                     <a href="login.html"><i class="fa-regular fa-user"></i></a>
