--- a/our story.html
+++ b/our story.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <link rel="stylesheet" href="myapp/css/our story.css story.css">
+  <link rel="stylesheet" href="css/our story.css">
   <title>Our story</title>
 </head>
 <body>
