--- a/shop all.html
+++ b/shop all.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="card">
                 <a href="#"><div class="img-container1">
-                    <img src="/shop all/bar vert.png" alt="image" />
+                    <img src="shop all/bar vert.png" alt="image" />
                 </div></a>
                 <div class="actions">
                     <a href="" class="favorite">
@@ -76,7 +76,7 @@
         <div class="container2">
             <div class="card">
                 <a href="#"><div class="img-container2">
-                    <img src="/shop all/bar vert.png" alt="image" />
+                    <img src="shop all/bar vert.png" alt="image" />
                 </div></a>
                 <div class="actions">
                     <a href="" class="favorite">
@@ -111,7 +111,7 @@
         <div class="container3">
             <div class="card">
                 <a href="#"><div class="img-container3">
-                    <img src="/shop all/bar vert.png" alt="image" />
+                    <img src="shop all/bar vert.png" alt="image" />
             </div></a>
                 <div class="actions">
                     <a href="" class="favorite">
@@ -148,7 +148,7 @@
         <div class="container4">
             <div class="card">
               <a href="#"><div class="img-container">
-                    <img src="/shop all/bar vert.png" alt="image" />
+                    <img src="shop all/bar vert.png" alt="image" />
                 </div></a>
                 <div class="actions">
                     <a href="" class="favorite">
