--- a/shop all.html
+++ b/shop all.html
@@ -39,7 +39,7 @@
 
         <div class="container">
             <div class="card">
-                <a href="#"><div class="img-container1">
+                <a href="#"><div class="img-container">
                     <img src="shop all/bar vert.png" alt="image" />
                 </div></a>
                 <div class="actions">
@@ -75,7 +75,7 @@
 
         <div class="container2">
             <div class="card">
-                <a href="#"><div class="img-container2">
+                <a href="#"><div class="img-container">
                     <img src="shop all/bar vert.png" alt="image" />
                 </div></a>
                 <div class="actions">
@@ -110,7 +110,7 @@
 
         <div class="container3">
             <div class="card">
-                <a href="#"><div class="img-container3">
+                <a href="#"><div class="img-container">
                     <img src="shop all/bar vert.png" alt="image" />
             </div></a>
                 <div class="actions">
@@ -178,6 +178,9 @@
                 </div>
             </div>
         </div>
+
+
+          
     </li>
     </section>
 </body>
