--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
   <header>
-     <div class="fond">
-      <video autoplay loop muted>
-        <source src="images/9ab4499b16fb4f5db1d42f56a5ca4436.HD-720p-4.5Mbps-29790564.mp4" type="video/mp4">
-      </video>
+    <div class="fond">
+     <img src="/images/back.png" alt="">
+     <H1 class="h1">Ultra Electrolytes</H1>
+     <div class="lienn">
+      <a href="#" class="lien">SHOP NOW</a>
+     </div>
      <div class="navlist">
       <ul>
         <div class="logo">
@@ -29,7 +31,7 @@
             <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
           </div>
       </ul>
-     </div>
+    </div>
   </header>
   <section class="produits">
     <div class="sellers">
