--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="fond">
-     <img src="/images/back.png" alt="">
+     <img src="images/back.png" alt="">
      <H1 class="h1">Ultra Electrolytes</H1>
      <div class="lienn">
       <a href="#" class="lien">SHOP NOW</a>
