--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h3>ULTRA ELECTROLYTES - <br> CITRUS SALT</h3>
           <p>€40,00</p>
           <div class="btn-container">
-            <a href="#">ADD TO BASKET</a>
+            <a href="produits.html">ADD TO BASKET</a>
           </div>
         </div>
       </div>
