--- a/shop all.html
+++ b/shop all.html
@@ -39,7 +39,7 @@
         <div class="container">
 
             <div class="card">
-                <a href="#"><div class="img-container">
+                <a href="produits.html"><div class="img-container">
                     <img src="shop all/bar vert.png" alt="image" />
                 </div></a>
                 <div class="actions">
@@ -72,7 +72,7 @@
 
 
             <div class="card2">
-                <a href="#"><div class="img-container">
+                <a href="produits.html"><div class="img-container">
                     <img src="shop all/bar vert.png" alt="image" />
                 </div></a>
                 <div class="actions">
@@ -103,7 +103,7 @@
             </div>
 
             <div class="card3">
-                <a href="#"><div class="img-container">
+                <a href="produits.html"><div class="img-container">
                     <img src="shop all/bar vert.png" alt="image" />
                 </div></a>
                 <div class="actions">
@@ -135,7 +135,7 @@
             </div>
 
             <div class="card4">
-                <a href="#"><div class="img-container">
+                <a href="produits.html"><div class="img-container">
                     <img src="shop all/bar vert.png" alt="image" />
                 </div></a>
                 <div class="actions">
@@ -169,7 +169,7 @@
         
         <div class="contend2">
             <div class="card5">
-                <a href="#"><div class="img-container2">
+                <a href="produits.html"><div class="img-container2">
                     <img src="shop all/MagnesiumResizes2_1.png" alt="image" />
                 </div></a>
                 <div class="actions">
@@ -202,7 +202,7 @@
 
 
             <div class="card6">
-                <a href="#"><div class="img-container2">
+                <a href="produits.html"><div class="img-container2">
                     <img src="shop all/CORDYCEPS4.png" alt="image" />
                 </div></a>
                 <div class="actions">
@@ -363,7 +363,7 @@
             </div>
 
             <div class="card11">
-                <a href="#"><div class="img-container2">
+                <a href="produits.html"><div class="img-container2">
                     <img src="shop all/LIONSMANE.png" alt="image" />
                 </div></a>
                 <div class="actions">
